fix(bottom-nav): misaligned icon and text

--- a/style.css
+++ b/style.css
@@ -684,12 +684,16 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .bottom-nav__button svg {
     width: 1rem;
     height: 1rem;
     color: var(--bg);
+    margin-right: 6px;
 }
 
 .bottom-nav__button span {
